modules/vpc/security_groups.tf
resource "aws_security_group" "sg-1" {
  name = "sg_ping_ssh"  
  description = "Ping y ssh"
  vpc_id      = "${aws_vpc.ipv6_vpc_terraform.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_ping_ssh"
  }
}

resource "aws_security_group" "sg-web" {
  name = "vpc-web"  
  description = "Vpc web"
  vpc_id      = "${aws_vpc.ipv6_vpc_terraform.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg_ping_ssh"
  }
}
